# PhiPlot

./: .gitignore  CMakeLists.txt  ChangeLog.md  PhiPlot.cabal
example/: if.phi
phiplot/: Main.hs
phiplot/Language/: PhiPlot.hs
phiplot/Language/PhiPlot/: AST.hs  Desugar.hs  Lexer.hs  Parser.hs
phiplot/src/Language/PhiPlot/: AST.hs
phivm/: CMakeLists.txt
